# SAM3-AutoAnnotator

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_sam3_auto_annotator.py  sam3_auto_annotator.py  text_promt.py
configs/: default.yaml
scripts/: run_auto_annotator.py
src/sam3_auto_annotator/: __init__.py  __main__.py  cli.py  config.py  paths.py  pipeline.py  predictor.py  summary.py  visualization.py
src/sam3_auto_annotator/exporters/: __init__.py  csv_exporter.py  yolo_exporter.py
